--- a/src/presentation/src/main/resources/templates/login/loginForm.html
+++ b/src/presentation/src/main/resources/templates/login/loginForm.html
@@ -19,17 +19,18 @@
         <div class="text-center">
           <h3 class="text-primary" th:text="로그인"> 로그인</h3>
         </div>
-        <form action="" th:action th:object="${loginForm}" method="post">
+        <form action="/login" th:action th:object="${loginForm}" method="post">
           <div class="p-4">
             <div class="input-group mb-3">
                                     <span class="input-group-text bg-primary"><i
                                             class="bi bi-person-plus-fill text-white"></i></span>
-              <input type="text" class="form-control" placeholder="아이디">
+              <input type="text" id="email" th:field="*{email}" class="form-control" placeholder="아이디">
+
             </div>
             <div class="input-group mb-3">
                                     <span class="input-group-text bg-primary"><i
                                             class="bi bi-key-fill text-white"></i></span>
-              <input type="password" class="form-control" placeholder="비밀번호">
+              <input type="password" id="password" th:field="*{password}" class="form-control" placeholder="비밀번호">
             </div>
             <div class="form-check">
               <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
