--- a/src/presentation/src/main/resources/templates/home/index.html
+++ b/src/presentation/src/main/resources/templates/home/index.html
@@ -1,17 +1,18 @@
 
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="ko">
+<html xmlns:th="http://www.thymeleaf.org">
   <head>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 
-    <title>Plot Listing HTML5 Website Template</title>
+    <title>Reservation-System</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -60,7 +61,8 @@ https://templatemo.com/tm-564-plot-listing
               <li><a href="index.html" class="active">Home</a></li>
               <li><a href="category.html">Category</a></li>
               <li><a href="listing.html">Listing</a></li>
-              <li><a href="contact.html">Contact Us</a></li> 
+              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="/login">로그인</a></li>
               <li><div class="main-white-button"><a href="#"><i class="fa fa-plus"></i> Add Your Listing</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
