--- a/src/presentation/src/main/resources/templates/home/loginHome.html
+++ b/src/presentation/src/main/resources/templates/home/loginHome.html
@@ -80,7 +80,7 @@ https://templatemo.com/tm-564-plot-listing
       <div class="row">
         <div class="col-lg-12">
           <div class="top-text header-text">
-            <h1 th:text="${loginMember.name}"></h1>
+            <h1 th:text="|HELLO ${loginMember.name}|"></h1>
             <h6>Over 36,500+ Active Listings</h6>
             <h2>Find Nearby Places &amp; Things</h2>
           </div>
