--- a/src/presentation/src/main/resources/templates/login/loginForm.html
+++ b/src/presentation/src/main/resources/templates/login/loginForm.html
@@ -44,7 +44,7 @@
             </button>
 
             <p class="text-center mt-5">계정이 없으신가요?
-              <span class="text-primary">회원가입</span>
+              <a th:href="@{/members/join}"> 회원가입</a>
             </p>
             <p class="text-center text-primary">비밀번호 찾기</p>
           </div>
