--- a/src/presentation/src/main/resources/templates/login/loginForm.html
+++ b/src/presentation/src/main/resources/templates/login/loginForm.html
@@ -20,18 +20,26 @@
         <div class="text-center">
           <h3 class="text-primary" th:text="로그인"> 로그인</h3>
         </div>
-        <form action="/login" th:action th:object="${loginForm}" method="post">
+        <form action="/login" th:object="${loginForm}" method="post">
           <div class="p-4">
             <div class="input-group mb-3">
                                     <span class="input-group-text bg-primary"><i
                                             class="bi bi-person-plus-fill text-white"></i></span>
-              <input type="text" id="email" th:field="*{email}" class="form-control" placeholder="아이디">
+              <input type="text" id="email" th:field="*{email}" class="form-control" placeholder="아이디"
+                  th:classappend="${#fields.hasErrors('email')} ? is-invalid">
+              <div class="invalid-feedback" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">
+                  이메일 에러
+              </div>
 
             </div>
             <div class="input-group mb-3">
                                     <span class="input-group-text bg-primary"><i
                                             class="bi bi-key-fill text-white"></i></span>
-              <input type="password" id="password" th:field="*{password}" class="form-control" placeholder="비밀번호">
+              <input type="password" id="password" th:field="*{password}" class="form-control" placeholder="비밀번호"
+                     th:classappend="${#fields.hasErrors('password')} ? is-invalid">
+              <div class="invalid-feedback" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">
+                패스워드 에러
+              </div>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
