--- a/src/presentation/src/main/resources/templates/home/index.html
+++ b/src/presentation/src/main/resources/templates/home/index.html
@@ -66,12 +66,18 @@
             <a class="nav-link disabled">Disabled</a>
           </li>
         </ul>
+
+
         <div class="text-end">
-          <a th:href="@{/login}" class="link-primary me-5">로그인</a>
+          <form th:action="@{/login}" method="get">
+            <button class="btn btn-secondary" onclick="location.href='index.html'" type="submit"> 로그인 </button>
+          </form>
+
+          <!--          <a th:href="@{/login}" class="link-primary me-5">로그인</a>-->
         </div>
         <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+<!--          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">-->
+<!--          <button class="btn btn-outline-success" type="submit">Search</button>-->
         </form>
       </div>
     </div>
