--- a/src/presentation/src/main/resources/templates/members/addMemberForm.html
+++ b/src/presentation/src/main/resources/templates/members/addMemberForm.html
@@ -20,7 +20,7 @@
                 <div class="text-center">
                     <h3 class="text-primary" th:text="회원가입"> 회원가입</h3>
                 </div>
-                <form action="/members/join" th:object="${memberForm}" method="post">
+                <form action="" th:object="${memberForm}" method="post">
                     <div class="p-4">
                         <div class="input-group mb-3">
                                     <span class="input-group-text bg-primary">
