--- a/src/presentation/src/main/resources/templates/login/loginForm.html
+++ b/src/presentation/src/main/resources/templates/login/loginForm.html
@@ -10,6 +10,12 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
+  <style>
+    .field-error {
+      border-color: #dc3545;
+      color: #dc3545;
+    }
+  </style>
 </head>
 
 <body>
@@ -21,10 +27,15 @@
           <h3 class="text-primary" th:text="로그인"> 로그인</h3>
         </div>
         <form action="/login" th:object="${loginForm}" method="post">
+
+
           <div class="p-4">
+            <div th:if="${#fields.hasGlobalErrors()}">
+              <p class="field-error" th:each="err : ${#fields.globalErrors()}"
+                 th:text="${err}">전체 오류 메시지</p>
+            </div>
             <div class="input-group mb-3">
-                                    <span class="input-group-text bg-primary"><i
-                                            class="bi bi-person-plus-fill text-white"></i></span>
+                                    <span class="input-group-text bg-primary"><i class="bi bi-person-plus-fill text-white"></i></span>
               <input type="text" id="email" th:field="*{email}" class="form-control" placeholder="아이디"
                   th:classappend="${#fields.hasErrors('email')} ? is-invalid">
               <div class="invalid-feedback" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">
