--- a/src/presentation/src/main/resources/templates/members/addMemberForm.html
+++ b/src/presentation/src/main/resources/templates/members/addMemberForm.html
@@ -10,6 +10,12 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
+    <style>
+        .field-error {
+            border-color: #dc3545;
+            color: #dc3545;
+        }
+    </style>
 </head>
 
 <body>
@@ -22,6 +28,10 @@
                 </div>
                 <form action="" th:object="${memberForm}" method="post">
                     <div class="p-4">
+                        <div th:if="${exception}">
+                            <p class="field-error" th:text="${exception}"> 오류 메시지 </p>
+                        </div>
+
                         <div class="input-group mb-3">
                                     <span class="input-group-text bg-primary">
                                         <i class="bi bi-person-plus-fill text-white"></i></span>
